# talk-to-me

./: .gitignore  CLAUDE.md  README.md  package.json
docs/plans/: 2026-02-19-onboarding-design.md  2026-02-19-onboarding-plan.md
issues/: Phase-2-Persistance-settings.md
src/: index.html  onboarding.html  overlay.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: registry.json
src-tauri/src/: lib.rs  main.rs  persistence.rs  state.rs
src-tauri/src/audio/: capture.rs  mod.rs  playback.rs  processing.rs
src-tauri/src/commands/: mod.rs  models.rs  settings.rs  stt.rs  tts.rs
src-tauri/src/engine/: mod.rs  onnx_stt.rs  onnx_tts.rs  whisper_stt.rs
src-tauri/src/hotkey/: mod.rs  right_cmd.rs
src-tauri/src/hub/: api.rs  download.rs  mod.rs  registry.rs
src-tauri/src/platform/: macos.rs  mod.rs
src/scripts/: api.js  app.js  onboarding.js  overlay.js
src/styles/: main.css  onboarding.css  overlay.css
