[package]
name = "talk-to-me"
version = "0.1.0"
description = "A macOS speech-to-text utility with local ML models"
authors = ["you"]
edition = "2021"

[lib]
name = "talk_to_me_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Audio (bidirectional: capture + future playback)
cpal = "0.15"
rubato = "0.14"
hound = "3.5"

# ML Inference
whisper-rs = { version = "0.12", features = ["metal"] }
ort = { version = "2.0.0-rc.11" }

# HuggingFace
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"

# Utils
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
objc2 = "0.6"
libc = "0.2"

